Add Employee feature

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,8 +1,9 @@
 <p>
-  <mat-toolbar>
+  <mat-toolbar style="width: 100%">
     <span>AE Employee</span>
-    <div class="example-button-row">
-    <button mat-raised-button style="color: dc2f02;" (click)="openAddEditeForm()">Add Employee</button>
+    <div class="example-button-row " style="margin-left: auto;">
+    <button mat-raised-button style="color: dc2f02;"  (click)="openAddEditeForm()">Add Employee</button>
+    
   </div>
   </mat-toolbar>
 </p>
