--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -6,21 +6,21 @@
     <!-- Position Column -->
     <ng-container matColumnDef="position">
       <th mat-header-cell *matHeaderCellDef> No. </th>
-      <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.id}} </td>
     </ng-container>
   
     <!-- Name Column -->
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef> Name </th>
-      <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.firstName}} </td>
     </ng-container>
     <ng-container matColumnDef="email">
       <th mat-header-cell *matHeaderCellDef> email </th>
-      <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.email}} </td>
     </ng-container>
     <ng-container matColumnDef="company">
       <th mat-header-cell *matHeaderCellDef> company </th>
-      <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.company}} </td>
     </ng-container>
     <!-- <ng-container matColumnDef="Action">
       <th mat-header-cell *matHeaderCellDef> Action </th>
@@ -32,7 +32,7 @@
         <button mat-icon-button color="primary" (click)="openEditForm(element)">
           <mat-icon>edit</mat-icon>
         </button>
-        <button mat-icon-button color="warn" (click)="deleteEmployee(element.email)">
+        <button mat-icon-button color="warn" (click)="deleteEmployee(element.id)">
           <mat-icon>delete</mat-icon>
         </button>
       </td>
